<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_database">Create database</string>
    <string name="add_data">Add data</string>
    <string name="query_data">Query data</string>
    <string name="delete_data">Delete data</string>
    <string name="update_data">Update data</string>
    <string name="hint_result">Here show the result</string>
    <string name="replace_data">Replace data</string>

</resources>
